# routes/index.js
@@ -3,12 +3,11 @@ const router = require('express').Router();
 router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => {
-    //swagger.tags=['Users']
     res.send('Hello, world!');
     });
 
 
 
-router.use('/users', require('./users'));
+router.use('/soccer', require('./soccer'));
 
 module.exports = router;
